--- a/UpdateCreator/App.xaml
+++ b/UpdateCreator/App.xaml
@@ -1,8 +1,11 @@
 ﻿<Application x:Class="UpdateCreator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             xmlns:viewModels="clr-namespace:UpdateCreator.ViewModels"
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <viewModels:ViewModelLocator x:Key="Locator"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
