--- a/UpdateCreator/Views/MainWindow.xaml
+++ b/UpdateCreator/Views/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:UpdateCreator.Views"
         mc:Ignorable="d" DataContext="{Binding MainViewModel, Mode=OneWay, Source={StaticResource Locator}}"
-        Title="Update package Creator" MinHeight="400" Width="525" WindowStartupLocation="CenterScreen" SizeToContent="Height">
+        Title="Update package Creator" MinHeight="500" MinWidth="750" 
+        WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" MinWidth="200"/>
@@ -19,9 +20,10 @@
         <DockPanel Grid.Column="0" Grid.IsSharedSizeScope="True" Margin="5" LastChildFill="True">
             <views:LabelTextboxUserControl Label="Application Name:" Text="12345" DockPanel.Dock="Top"/>
             <views:LabelTextboxUserControl Label="Upload path:" Text="1234567890" DockPanel.Dock="Bottom"/>
-            <Separator Margin="5,5,5,0" DockPanel.Dock="Bottom"/>
+            <Separator Margin="5,5,5,5" DockPanel.Dock="Bottom"/>
+            <views:LabelUrlFileUserControl Label="Url:" Url="1234567890" Filename="update.zip" DockPanel.Dock="Bottom"/>
             <views:LabelTextboxUserControl Label="Hash:" Text="1234567890" IsReadOnly="True" DockPanel.Dock="Bottom"/>
-                        <views:LabelTextboxUserControl Label="Version:" Text="1234567890" IsReadOnly="True" DockPanel.Dock="Bottom"/>
+            <views:LabelTextboxUserControl Label="Version:" Text="1234567890" IsReadOnly="True" DockPanel.Dock="Bottom"/>
             <views:LabelTextboxUserControl Label="Launch args:" Text="1234567890" DockPanel.Dock="Bottom"/>
             <views:LabelTextboxUserControl Label="Filename:" Text="1234567890"  DockPanel.Dock="Bottom"/>
             <views:LabelTextboxUserControl Label="Description:" Text="1234567890" MinHeight="100" IsMultiline="True"/>
@@ -29,7 +31,20 @@
         <GridSplitter Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,5"/>
         <DockPanel Grid.Row="0" Grid.Column="2" Grid.IsSharedSizeScope="True" Margin="5" LastChildFill="True">
             <views:LabelTextboxUserControl Label="Exlude mask:" Text="12345" DockPanel.Dock="Top" />
-            <ListView Margin="0,5,5,0"  />
+            <ListView Margin="0,5,5,0" ItemsSource="{Binding FileList}" ScrollViewer.VerticalScrollBarVisibility="Visible" >
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <CheckBox IsChecked="{Binding IsSelected}" Content="{Binding Filename}"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </DockPanel>
         <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="0,20" HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
