--- a/UpdateCreator/Views/LabelTextboxUserControl.xaml
+++ b/UpdateCreator/Views/LabelTextboxUserControl.xaml
@@ -30,7 +30,7 @@
                 </Style>
             </Label.Style>
         </Label>
-        <TextBox Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="5,2" x:Name="TextBox"
+        <TextBox Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Margin="5,2"
                  Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type views:LabelTextboxUserControl}}}" 
                  IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type views:LabelTextboxUserControl}}}" 
                  AcceptsReturn="{Binding IsMultiline, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type views:LabelTextboxUserControl}}}">
