--- a/UpdateCreator/Views/LabelUrlFileUserControl.xaml
+++ b/UpdateCreator/Views/LabelUrlFileUserControl.xaml
@@ -18,7 +18,7 @@
         <TextBox Grid.Column="1" Margin="5,2.5,5,2.5" VerticalAlignment="Center"
                  Text="{Binding Url, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type views:LabelUrlFileUserControl}}}" />
         <Label Grid.Column="2" Content="/" Margin="0" Padding="0" VerticalContentAlignment="Center" VerticalAlignment="Center"/>
-        <TextBox Grid.Column="3" Margin="5,2.5,5,2.5" VerticalAlignment="Center"
+        <TextBox Grid.Column="3" Margin="5,2.5,5,2.5" VerticalAlignment="Center" IsReadOnly="True"
                  Text="{Binding Filename, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type views:LabelUrlFileUserControl}}}" />
     </Grid>
 </UserControl>
