--- a/UpdateCreator/Views/MainWindow.xaml
+++ b/UpdateCreator/Views/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:UpdateCreator.Views"
         mc:Ignorable="d" DataContext="{Binding MainViewModel, Mode=OneWay, Source={StaticResource Locator}}"
-        Title="Update package Creator" MinHeight="500" MinWidth="750" Height="500"
-        WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
+        Title="Update package Creator" MinHeight="500" MinWidth="750" Height="500" Width="750" 
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" MinWidth="266"/>
