--- a/UpdateCreator/Views/MainWindow.xaml
+++ b/UpdateCreator/Views/MainWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:helpers="clr-namespace:UpdateCreator.Helpers"
         mc:Ignorable="d" DataContext="{Binding MainViewModel, Mode=OneWay, Source={StaticResource Locator}}"
         Title="Update package Creator" MinHeight="500" MinWidth="750" Height="500" Width="750" 
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" MinWidth="266"/>
@@ -16,6 +17,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <DockPanel Grid.Column="0" Grid.IsSharedSizeScope="True" Margin="5" LastChildFill="True" Background="Transparent"
@@ -56,7 +58,7 @@
                 </ListView.ItemTemplate>
             </ListView>
         </DockPanel>
-        <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="0,20" HorizontalAlignment="Center">
+        <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="0,10" HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="110"/>
                 <ColumnDefinition Width="110"/>
@@ -72,5 +74,17 @@
                 <TextBlock Text="{Binding DisplayName}" TextWrapping="Wrap" TextAlignment="Center"/>
             </Button>
         </Grid>
+        <StatusBar Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="5,0,5,5" >
+            <StatusBarItem HorizontalContentAlignment="Stretch" >
+                <Grid>
+                    <ProgressBar Height="15" Value="{Binding ProgressValue}" />
+                    <TextBlock Text="{Binding FileNameArchive}"></TextBlock>
+                </Grid>
+                
+            </StatusBarItem>
+            <!--<StatusBarItem HorizontalContentAlignment="Stretch" >
+                <Label Content="{Binding FileNameArchive}"/>
+            </StatusBarItem>-->
+        </StatusBar>
     </Grid>
 </Window>
