--- a/UpdateCreator/Views/MainWindow.xaml
+++ b/UpdateCreator/Views/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="Update package Creator" MinHeight="500" MinWidth="750" Height="500" Width="750" 
         WindowStartupLocation="CenterScreen"
         >
-    <Grid>
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" MinWidth="266"/>
             <ColumnDefinition Width="3"/>
@@ -21,7 +21,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <DockPanel Grid.Column="0" Grid.IsSharedSizeScope="True" Margin="5" LastChildFill="True" Background="Transparent"
-                   AllowDrop="True" helpers:DragDropHelper.Target="{Binding}">
+                   AllowDrop="True" helpers:DragDropHelper.Target="{Binding}" IsEnabled="{Binding IsEnabled}">
             <views:LabelTextboxUserControl Label="Package Name:" Text="{Binding PackageName}" DockPanel.Dock="Top"/>
             <views:LabelTextboxUserControl Label="Product Name:" Text="{Binding ProductName}" DockPanel.Dock="Top"/>
             <views:LabelTextboxUserControl Label="Upload path:" Text="{Binding UploadPath}" DockPanel.Dock="Bottom"/>
@@ -33,7 +33,7 @@
             <views:LabelTextboxUserControl Label="Description:" Text="{Binding Description}" MinHeight="100" IsMultiline="True"/>
         </DockPanel>
         <GridSplitter Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,5"/>
-        <DockPanel Grid.Row="0" Grid.Column="2" Grid.IsSharedSizeScope="True" Margin="5">
+        <DockPanel Grid.Row="0" Grid.Column="2" Grid.IsSharedSizeScope="True" Margin="5" IsEnabled="{Binding IsEnabled}">
             <DockPanel DockPanel.Dock="Top" Margin="0,0,5,0">
                 <Button DataContext="{Binding UpdateFilelistCommand}" Command="{Binding Command}" Content="&#x21bb;"
                         DockPanel.Dock="Right" VerticalAlignment="Center" Padding="3,1" VerticalContentAlignment="Center"/>
@@ -58,27 +58,27 @@
                 </ListView.ItemTemplate>
             </ListView>
         </DockPanel>
-        <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="0,10" HorizontalAlignment="Center">
+        <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="0,10" HorizontalAlignment="Center" IsEnabled="{Binding IsAlwaysEnabled}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="110"/>
                 <ColumnDefinition Width="110"/>
                 <ColumnDefinition Width="110"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" DataContext="{Binding CreateUpdatePackageCommand}" Command="{Binding Command}" ToolTip="{Binding HitText}" Margin="10,0">
-                <TextBlock Text="{Binding DisplayName}" TextWrapping="Wrap" TextAlignment="Center"/>
+            <Button Grid.Column="0" DataContext="{Binding UpdatePackageCommand}" Command="{Binding Command}" ToolTip="{Binding HitText}" Margin="10,0" >
+                <TextBlock Text="{Binding DisplayName}" TextWrapping="Wrap" TextAlignment="Center" />
             </Button>
             <Button Grid.Column="1" DataContext="{Binding UploadOnServerCommand}" Command="{Binding Command}" ToolTip="{Binding HitText}" Margin="10,0">
                 <TextBlock Text="{Binding DisplayName}" TextWrapping="Wrap" TextAlignment="Center"/>
             </Button>
             <Button Grid.Column="2" DataContext="{Binding CloseCommand}" Command="{Binding Command}" ToolTip="{Binding HitText}" Margin="10,0">
-                <TextBlock Text="{Binding DisplayName}" TextWrapping="Wrap" TextAlignment="Center"/>
+                <TextBlock Text="{Binding DisplayName}" TextWrapping="Wrap" TextAlignment="Center" />
             </Button>
         </Grid>
-        <StatusBar Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="5,0,5,5" >
+        <StatusBar Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="5,0,5,5" IsEnabled="{Binding IsAlwaysEnabled}">
             <StatusBarItem HorizontalContentAlignment="Stretch" >
                 <Grid>
                     <ProgressBar Height="15" Value="{Binding ProgressValue}" />
-                    <TextBlock Text="{Binding FileNameArchive}"></TextBlock>
+                    <TextBlock Text="{Binding ProgressFileName}"></TextBlock>
                 </Grid>
                 
             </StatusBarItem>
