--- a/UpdateCreator/Views/MainWindow.xaml
+++ b/UpdateCreator/Views/MainWindow.xaml
@@ -58,7 +58,7 @@
                 </ListView.ItemTemplate>
             </ListView>
         </DockPanel>
-        <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="0,10" HorizontalAlignment="Center" IsEnabled="{Binding IsAlwaysEnabled}">
+        <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="0,10" HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="110"/>
                 <ColumnDefinition Width="110"/>
@@ -74,11 +74,12 @@
                 <TextBlock Text="{Binding DisplayName}" TextWrapping="Wrap" TextAlignment="Center" />
             </Button>
         </Grid>
-        <StatusBar Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="5,0,5,5" IsEnabled="{Binding IsAlwaysEnabled}">
+        <StatusBar Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="5,0,5,5">
             <StatusBarItem HorizontalContentAlignment="Stretch" >
                 <Grid>
-                    <ProgressBar Height="15" Value="{Binding ProgressValue}" />
-                    <TextBlock Text="{Binding ProgressFileName}"></TextBlock>
+                    <ProgressBar Value="{Binding ProgressValue}" />
+                    <TextBlock Text="{Binding ProgressFileName}" Padding="10,4"/>
+                    <TextBlock Text="{Binding ProgressPercentValue}" FontWeight="Bold" Padding="10,4" HorizontalAlignment="Center"/>
                 </Grid>
                 
             </StatusBarItem>
